# claude-code

./: cowork_instrucciones.md  skills-lock.json
graph-viewer/: .gitignore  AGENTS.md  Historico_versiones.md  README.md  prompts.md  pyproject.toml
graph-viewer/.specify/: feature.json  init-options.json  integration.json
graph-viewer/.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
graph-viewer/.specify/memory/: constitution.md
graph-viewer/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
graph-viewer/.specify/workflows/: workflow-registry.json
graph-viewer/docs/: architecture.md  conventions.md  verification.md
graph-viewer/progress/: Blockers.md  Current.md  Decisions.md  History.md  Retrospectives.md
graph-viewer/specs/001-interactive-graph-viewer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
graph-viewer/specs/001-interactive-graph-viewer/checklists/: requirements.md
graph-viewer/specs/001-interactive-graph-viewer/contracts/: python-source-contract.md  render-interaction-contract.md
graph-viewer/src/graph_viewer/: __init__.py  app.py  config.py
graph-viewer/src/graph_viewer/graph/: __init__.py  builder.py  model.py  queries.py
graph-viewer/src/graph_viewer/layout/: __init__.py  (+1 more)
graph-viewer/tests/: conftest.py
graph-viewer/tests/integration/: test_5000_node_performance_fixture.py  test_load_validate_render_flow.py  test_nested_subgraph_metadata.py  test_plotly_selection_flow.py  test_search_center_flow.py  test_streamlit_cache_boundaries.py
(+143 files in other folders)
