[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-viewer"
version = "0.1.0"
description = "Interactive Streamlit graph viewer with schema validation and Plotly rendering."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.22",
    "networkx>=3.4",
    "plotly>=5.22",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
graph_viewer = ["validation/*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
